diskann-quantization/tests/compile-fail/multi/matref_rows.stderr
error[E0502]: cannot borrow `mat` as mutable because it is also borrowed as immutable
  --> tests/compile-fail/multi/matref_rows.rs:15:13
   |
12 |     let view: MatRef<'_, Standard<f32>> = mat.as_view();
   |                                           --- immutable borrow occurs here
...
15 |     let _ = mat.as_view_mut();
   |             ^^^^^^^^^^^^^^^^^ mutable borrow occurs here
16 |     for row in iter {
   |                ---- immutable borrow later used here
